Flettet beskrivelse til område i fullmakt instans